--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -20,3 +20,14 @@ body {
 html {
   font-size: 62.5%; // 1 rem = 10px  10px/16px = 62.5%
 }
+
+button {
+  font-family: sans-serif;
+  font-size: 1.6rem;
+  padding: 1rem 2rem;
+}
+
+.button-green {
+  background-color: powderblue;
+  color: white;
+}
