--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -17,3 +17,12 @@ body {
 
 html {
   font-size: 62.5%; }
+
+button {
+  font-family: sans-serif;
+  font-size: 1.6rem;
+  padding: 1rem 2rem; }
+
+.button-green {
+  background-color: powderblue;
+  color: white; }
