--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -24,5 +24,5 @@ button {
   padding: 1rem 2rem; }
 
 .button-green {
-  background-color: powderblue;
+  background-color: teal;
   color: white; }
